# News-Agent

./: .gitignore  README.md  daily_update.py  index.html  main.py  pyproject.toml  requirements.txt  rss_feed.py  rss_history.json  生成md文章.py  生成累积RSS.py  生成累积新闻.py
RSS feed URL/: rss_feed_url.json
config/: rss_feed_urls.json
cumulative_news/: AI_cumulative.md  Finance_cumulative.md  Technology_cumulative.md  cumulative_summary_20250529_0420.md  cumulative_summary_20250529_0531.md  cumulative_summary_20250529_0618.md  cumulative_summary_20250529_0622.md  cumulative_summary_20250529_0640.md  cumulative_summary_20250529_0651.md  cumulative_summary_20250529_0825.md  cumulative_summary_20250529_0835.md  cumulative_summary_20250529_0931.md  cumulative_summary_20250529_1024.md  cumulative_summary_20250529_1122.md  cumulative_summary_20250529_1129.md  cumulative_summary_20250529_1155.md  cumulative_summary_20250529_1157.md  cumulative_summary_20250529_1213.md  cumulative_summary_20250529_1242.md  cumulative_summary_20250529_1315.md  cumulative_summary_20250529_1420.md  cumulative_summary_20250529_1626.md  cumulative_summary_20250530_0142.md  cumulative_summary_20250530_0312.md  cumulative_summary_20250530_0427.md  cumulative_summary_20250530_0630.md  cumulative_summary_20250530_0828.md  cumulative_summary_20250530_1023.md  cumulative_summary_20250530_1242.md  cumulative_summary_20250530_1421.md  cumulative_summary_20250530_1627.md  cumulative_summary_20250531_0142.md  cumulative_summary_20250531_0312.md  cumulative_summary_20250531_0316.md  cumulative_summary_20250531_0319.md  (+606 more)
(+43 files in other folders)
