[project]
name = "news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2023.7.22",
    "colorama>=0.4.6",
    "feedparser>=6.0.0",
    "google-genai>=0.9.0",
    "httpcore>=1.0.0",
    "httpx>=0.25.0",
    "lxml>=4.9.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
    "scikit-learn>=1.3.0",
    "urllib3>=1.26.0",
]
